# image_backend

./: .gitignore  Dockerfile  Makefile  back.md  database.py  main.py  prompt.md  pyproject.toml  requirements.txt
src/: main.py
src/application/use_cases/: __init__.py  complete_payment.py  generate_image.py  get_user_credits.py  purchase_credits.py  submit_feedback.py
src/domain/: exceptions.py
src/domain/entities/: credit_transaction.py  user.py
src/domain/repositories/: __init__.py  transaction_repository.py  user_repository.py
src/domain/services/: __init__.py  image_generator.py  payment_gateway.py
src/domain/value_objects/: __init__.py  credits.py  email.py  money.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: connection.py  models.py
src/infrastructure/external_services/: __init__.py  gemini_image_generator.py  stripe_payment_gateway.py
src/infrastructure/repositories/: __init__.py  transaction_repository.py  user_repository.py
src/presentation/api/: dependencies.py  error_handlers.py
src/presentation/api/routes/: __init__.py  credits.py  feedback.py  health.py  image_generation.py  payments.py  webhooks.py
src/presentation/api/schemas/: __init__.py  requests.py  responses.py
src/shared/: result.py
